# robotics-book

./: .env.example  .gitignore  Physical_AI_Humanoid_Robotics_Course_Package.md  requirements.txt  ros2_workspace_scanner.py  start-website.bat  vercel.json
.gemini/: settings.local.json
.git_backup/: COMMIT_EDITMSG  HEAD  index
.git_backup/logs/: HEAD
.git_backup/refs/heads/: 001-module-2-chapters  main
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
Physical_AI_and_Humanoid_Robotics_Capstone/: README.md
docs/: BONUS_CONTENT.md  DEMO_SETUP_INSTRUCTIONS.md  DEMO_SOURCE_CODE.md  DEMO_VIDEO_SCRIPT.md  FINAL_SPECIFICATION.md  ONE_PAGER_CONTENT.md  PITCH_DECK.md  README.md
history/prompts/constitution/: 0001-update-project-constitution-with-new-principles.constitution.prompt.md  0003-generate-constitution-for-spec-kit-plus-writing-system.constitution.prompt.md
humanoid-robotics-book/: index.html  package-lock.json  package.json  script.js  style.css  vercel.json
humanoid-robotics-book/frontend/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
humanoid-robotics-book/frontend/data/: chapters.json
humanoid-robotics-book/speckit-plus/: description.txt
my-docusaurus-site/: package-lock.json  package.json
ros2_ws_local/src/my_robot_control/: CMakeLists.txt  package.xml  setup.py  simple_subscriber.py
sp/: sp.architecture  sp.chapter  sp.chapter.template  sp.constitution  sp.plan  sp.plan.humanoid-robotics-system.md  sp.spec  sp.vision
(+111 files in other folders)
